--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  height: 100%;
+  padding: 10px;
 }
 
 .App-logo {
@@ -7,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
