--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,6 @@
 body {
+  color: white;
+  background-color: #282c34;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
